Fixed experience page for ipad, fixed bootstrap (added dimensions to containers) so all products are nicely aligned

--- a/components/exp.module.css
+++ b/components/exp.module.css
@@ -60,9 +60,30 @@ background-position: center;}
     margin-top: 11rem;
 }
 
+@media (max-width:1100px)
+{
+    .exp_map{
+        margin-left: 1rem;
+        margin-right: 1rem;
+        margin-top: 17rem;
+    }
+}
+@media (max-width:920px)
+{
+    .exp_map{
+        margin-left: -2rem;
+        margin-right: 2rem;
+        margin-top: 20rem;
+    }
+
+    .exp_title{
+        font-size: 40px;
+    }
+}
+
 @media (max-width: 820px){
     .exp_title{
-        font-size: 35px;
+        font-size: 40px;
     }
 
     .exp_body{
@@ -70,11 +91,28 @@ background-position: center;}
         margin-left: 0.5rem;
         margin-right: 0.5rem;
     }
+
+    .exp_map{
+        margin-left:1rem;
+        margin-right:1rem;
+        margin-top: 7rem;
+        width: 246px;
+        height: 150px;
+    }
+
+    .text_container{
+        padding:1rem;
+    }
+    .expcontainer{
+        padding: 1rem;
+    }
+
 }
 
 @media (max-width: 420px){
     .exp_title{
         font-size: 25px;
+        margin-left: 0.5rem;
     }
 
     .exp_body{
